# hcompress

./: README.md
hcomp-1.2/: AUTHORS  Makefile.am  Makefile.in  NEWS  README  config.h.in  configure  configure.in
hcomp-1.2/doc/: Makefile.am  Makefile.in  README  hcompress.1  hcompress.man
hcomp-1.2/src/: Makefile.am  Makefile.in  bit_input.c  bit_output.c  decode.c  digitize.c  dodecode.c  doencode.c  encode.c  fitspass.c  fitsread.c  get_data.c  hcomp.c  hcomplib.c  hcompress.h  hdecomp.c  hdecomplib.c  hinv.c  hsmooth.c  htrans.c  makefits.c  put_data.c  qread.c  qtree_decode.c  qtree_encode.c  qwrite.c  swap_bytes.c
